--- a/client/src/main/java/com/gmail/burinigor7/gui/UserForm.form
+++ b/client/src/main/java/com/gmail/burinigor7/gui/UserForm.form
@@ -98,7 +98,7 @@
           </grid>
         </children>
       </grid>
-      <grid id="b5afe" binding="chatPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="b5afe" binding="chatPanel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="50" left="0" bottom="0" right="40"/>
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -106,27 +106,6 @@
         <properties/>
         <border type="none"/>
         <children>
-          <grid id="db843" binding="chatContentPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="0"/>
-            <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties/>
-            <border type="none"/>
-            <children>
-              <component id="15e78" class="javax.swing.JTextArea" binding="chat">
-                <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                    <preferred-size width="150" height="50"/>
-                  </grid>
-                </constraints>
-                <properties>
-                  <font size="14"/>
-                  <text value=""/>
-                </properties>
-              </component>
-            </children>
-          </grid>
           <component id="5db57" class="javax.swing.JLabel" binding="chatLabel">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -136,6 +115,22 @@
               <text value="Chat:"/>
             </properties>
           </component>
+          <scrollpane id="fb156" binding="chatContentPanel">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="2" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="15e78" class="javax.swing.JTextArea" binding="chat">
+                <constraints/>
+                <properties>
+                  <font size="14"/>
+                  <text value=""/>
+                </properties>
+              </component>
+            </children>
+          </scrollpane>
         </children>
       </grid>
       <grid id="b19e" binding="sendMessagePanel" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
